                     CHANGES version 5.28.0

           This file summarizes changes made since 5.0

Version 5.28.0

New: Monit can now watch offline TCP/UDP ports and perform action on successful connection.
It can be used as a security check, e.g. if a service like mysql should not be publicly available, or
to perform custom actions to initialize the service that depends on the one that was just started.
Thanks to Christian Goettsche for patch. Example:
   if succeeded port 443 protocol https then exec "/bin/monit start myclient"
   if succeeded host example.org port 3306 protocol mysql then alert

New: Monit can watch unix sockets that doesn't exist or are offline and perform action on successful
connection. Example:
   if succeeded unixsocket /var/run/mysql.sock protocol mysql then exec "/bin/myscript.sh initdb"

New: Monit can ping hosts that are supposed to be offline and perform action when they become
available. Example:
   if succeeded ping then alert

New: Issue #915: Add support for sevice name regular expressions in  monit CLI status, summary, start,
stop, restart, unmonitor, monitor commands. Examples:
   monit status myservice  # exact match
   monit status "data.*"    # pattern which will match all services whos name contain "data" substring


Version 5.27.2

Fixed: Issue #931: The "if does exist" test with unmonitor or stop action didn't work properly.

Fixed: Issue #937: If the filesystem check uses mountpoint instead of device and multiple devices
are defined for the same filesystem with mismatch between /etc/mtab and device name in disk statistics
path, Monit reported error and disk activity was not reported.

Fixed: Issue #948: Cookie validation problem, Invalid CSRF Token, if the request is more then 1024 bytes.
Increased the request to 8kB.

Fixed: Disk activity statistics if procfs fallback was used instead of sysfs.

Fixed: LXC container: Monit may ignore the "start delay" option of the "set daemon" statement when the container