@@ -1066,7 +1066,7 @@ Monit will raise an alert in the following situations:
  o A file content test found a match
  o Filesystem flags changed
  o A service action was performed by administrator
- o A network link failed
+ o A network link down or up
  o A network link capacity changed
  o A network link saturation failed
  o A network link upload/download rate failed
@@ -3032,17 +3032,23 @@ within a check network service entry in the Monit control file.
 
 Syntax:
 
- IF FAILED LINK THEN action
+ IF LINK <DOWN|UP> THEN action
 
 I<action> is a choice of "ALERT", "RESTART", "START", "STOP",
 "EXEC" or "UNMONITOR".
 
-The test will fail if the link/interface is down or link errors were detected.
+The I<DOWN> test will fail if the link/interface is down or link errors were
+detected.
 
-Example:
+Mixing "link up" and "link down" in the same "check network" is not supported.
+
+Examples:
 
  check network eth0 with interface eth0
-       if failed link then alert
+       if link down then alert
+
+ check network eth5 with interface eth5
+       if link up then exec "/usr/bin/monit start backup"
 
 In case a link failed you can add a start and stop program to automatically
 restart the interface which might help. (Substitute with the relevant network
@@ -3051,7 +3057,7 @@ commands for your system)
  check network eth0 with interface eth0
        start program = '/sbin/ipup eth0'
        stop program = '/sbin/ipdown eth0'
-       if failed link then restart
+       if link down then restart
 
 
 =head3 Link capacity
