@@ -4,6 +4,15 @@
 
 Version 5.28.0
 
+Deprecated: Monit "IF FAILED LINK" test was renamed to "IF LINK DOWN". The old syntax is deprecated, but still
+works for backward compatibility.
+
+New: Added "IF LINK UP" network interface test, which allows to monitor network interface that is by default down,
+and trigger action, when the interface is enabled. Example:
+    if link up then "/usr/bin/monit start backup"
+Notes: When "link up" test is used, the link errors tests are ignored, as these tests share the same event type
+and would reset the status. Also, mixing "link up" and "link down" in the same "check network" is not supported.
+
 New: Monit can now watch offline TCP/UDP ports and perform action on successful connection.
 It can be used as a security check, e.g. if a service like mysql should not be publicly available, or
 to perform custom actions to initialize the service that depends on the one that was just started.
